# cld2

./: .gitignore  CMakeLists.txt  README.md
cld2/: CMakeLists.txt  cld2_unittest.cc  cld2_unittest_full.cc  detect_langs.cc  detect_langs.h
internal/: CMakeLists.txt
perl/: detect.pl
perl/CLD2-0.10/: Changes  MANIFEST  META.json  META.yml  Makefile.PL  README
perl/CLD2-0.10/lib/: CLD2.pm
perl/CLD2-0.10/t/: CLD2.t
public/: CMakeLists.txt
tool/: CMakeLists.txt  detect.cc  detect_langs.cc  detect_langs.h
